Fri Jul 14 01:17:40 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/qt/*:
        * tests/qt/additional_options.txt:
        * tests/qt/build_entry.txt:
        * tests/qt/configure.ac.patch:
        * tests/qt/demo.ui:
        * tests/qt/main.cpp:
        * tests/qt/qt_uic_moc.mpc:

          Added a new test for Qt3.

Thu Jul 13 16:43:50 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/wide_coverage/bmake/generator/Makefile.generator.bmak:

          Updated to reflect my change from Thu Jul 13 16:29:33 UTC 2006.

        * expected/windows_style/*:
        * tests/windows_style/arch.cpp:
        * tests/windows_style/bar.h:
        * tests/windows_style/basic_export.h:
        * tests/windows_style/config/base.mpb:
        * tests/windows_style/foo.cpp:
        * tests/windows_style/sub/sub.mpc:
        * tests/windows_style/sub/sub.cpp:
        * tests/windows_style/support_lib.mpc:

          Added a new test to exercise the 'windows_style' template
          variable.

Tue Jul 11 12:33:39 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Updated the documentation to make it easier to add new tests.

        * run_tests.pl:

          When running patch, pass the -p0 option.

        * expected/buildflags/automake/source/Makefile.am:
        * expected/circular_dependencies/automake/DomainApplicationManager/Makefile.am:
        * expected/circular_dependencies/automake/NodeApplication/Makefile.am:
        * expected/circular_dependencies/automake/NodeApplicationManager/Makefile.am:
        * expected/circular_dependencies/automake/NodeManager/Makefile.am:
        * expected/circular_dependencies/automake/TargetManager/Makefile.am:
        * expected/conditional_specific_verbatim_wildcards/automake/source/Makefile.am:
        * expected/exclude/automake/one/three/Makefile.am:
        * expected/exclude/automake/two/Makefile.am:
        * expected/features_custom_only/automake/source/Makefile.am: